# coost

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  LICENSE.md  Makefile  clean.sh  docs.md  makevsprj.sh  readme.md  readme_cn.md  utils.cmake  xmake.lua
.github/: FUNDING.yml
.github/workflows/: android.yml  cpp.yml  fedora.yml  ios.yml  linux.yml  mac.yml  macos.yml  musl.yml  win.yml
base/: CMakeLists.txt  SConscript  SConstruct  _build.sh  _clean.sh  _inc.sh  base.h  co.h  def.h  fast.cc  fast.h  fastream.h  fastring.cc  fastring.h  flag.cc  flag.h  fs.h  hash.h  json.cc  json.h  log.cc  log.h  os.h  path.cc  random.h  rpc.cc  rpc.h  str.cc  str.h  thread.cc  unitest.cc  unitest.h  xmake.lua
base/__/: dtoa_milo.h
base/co/: co.h
base/co/context/: context.S  context.h  context_arm.S  context_arm64.S  context_mips.S  context_x86.S  prefix_arm.S  prefix_mips.S  prefix_x86_64.S
base/co/impl/: co.cc  co_unix.cc  co_win.cpp  dbg.h  epoll.cc  epoll.h  hook.cc  hook.h  hook_unix.cc  scheduler.cc  scheduler.h  sock.cc  sock.cpp
base/hash/: base64.cc  crc16.cc  crc16.h  md5.cc  md5.h  murmur_hash.cc  murmur_hash.h
base/milo/: dtoa_milo.h  license.txt
base/so/: tcp.cc
base/stack_trace/: StackWalker.cpp  StackWalker.h  stack_trace_unix.cc  stack_trace_win.cpp
base/unix/: atomic.h  fs.cc  os.cc  thread.h  time.cc
base/win/: atomic.h  fs.cpp  os.cpp  thread.h  time.cpp
benchmark/: json_bm.cc  log_bm.cc  readme.md  xmake.lua
cmake/: cocoyaxi.pc.in  cocoyaxiConfig.cmake.in  coost.pc.in  coostConfig.cmake.in
docs/: 1.overview.md  2.primitive definitions (def).md  20.文件系统操作(fs).md  cn.md  co_cn.html  co_cn.md  co_en.html  co_en.md  docs.md  en.md
docs/cn/: 02.基本定义(def).md  03.原子操作(atomic).md  04.随机数生成器(random).md  05.LRU-map.md  06.基本类型快速转字符串(fast).md  07.高效字符流(fastream).md  08.高效字符串(fastring).md  09.字符串操作(str).md  1.概览.md  10.命令行参数与配置文件解析库(flag).md  10.命令行参数于配置文件解析库(flag).md  11.高效流式日志库(log).md  12.单元测试框架(unitest).md  13.时间库(time).md  14.线程库(thread).md  15.协程库(co).md  16.高效 json库(json).md  16.高效json库(json).md  17.高性能json-rpc框架(rpc).md  18.hash库(hash).md  19.path库(path).md  20.文件系统操作(fs).md  21.系统操作(os).md  22.编译.md  23.友情合作.md  3.原子操作(atomic).md  4.随机数生成器(random).md  5.LRU-map.md  6.基本类型快速转字符串(fast).md  7.高效字符流(fastream).md  8.高效字符串(fastring).md  9.字符串操作(str).md  readme.md  编译.md
docs/en/: 01.overview.md  02.basic definitions (def).md  02.basic_definitions.md  03.atomic operations (atomic).md  03.atomic_operations.md  04.fast random number generator (random).md  04.fast_random_number_generator.md  05.LRU Map.md  05.lru_map.md  06.fast string casting for basic types (fast).md  06.fast_string_casting_for_basic_types.md  07.efficient byte stream (fastream).md  07.efficient_byte_stream(fastream).md  08.efficient strings (fastring).md  08.efficient_strings(fastring).md  09.string_operations(str).md  10.commandline arguments and config file parsing (flag).md  10.commandline_arguments_and_config_file_parsing(flag).md  11.efficient streaming log library (log).md  11.efficient_streaming_log_library(log).md  12.unit testing framework (unittest).md  12.unit_testing_framework(unitest).md  12.unittest framework (unittest).md  13.time library (time).md  13.time_library.md  14.thread library (thread).md  14.thread_library.md  15.coroutine library (co).md  (+19 more)
rpcgen/: CMakeLists.txt  build.sh  rpcgen.cc  xmake.lua
src/: CMakeLists.txt  alloc.cc  benchmark.cc  color.cc  cout.cc  error.cc  fast.cc  fastring.cc  flag.cc  fs.cc  fs_win.cc  json.cc  jsonv2.cc  log.cc  mem.cc  os.cc  os_win.cc  path.cc  rand.cc  rpc.cc  str.cc  tasked.cc  thread.cc  time.cc  time_win.cc  two_way.h  unitest.cc  xmake.lua
src/__/: StackWalker.cpp  StackWalker.hpp  stack_trace.cc  stack_trace_win.cc
src/co/: close.h  co.cc  epoll.cc  hook.cc  hook.h  hook_win.cc  io_event.cc  sched.cc  sched.h  scheduler.cc  scheduler.h  sock.cc  sock.cpp  sock_ctx.h  sock_win.cc
src/co/context/: arch.h  context_x64.S  context_x86.S  context_x86.asm  prefix_arm64.S  prefix_x86_64.S
src/co/detours/: detours.h  image.cpp  uimports.cpp
src/co/epoll/: epoll.cc  epoll.h  iocp.cc  iocp.h  kqueue.cc  kqueue.h
src/co/impl/: co.cc  dbg.h  epoll.cc  epoll.h  hook.cc  hook.h  io_event.h  scheduler.cc  scheduler.h  sock.cc  sock.cpp
src/hash/: base64.cc  crc16.cc  md5.cc  murmur_hash.cc  nanoid.cc  sha256.cc  url.cc
src/log/: IATHook.cc  IATHook.h  StackWalker.hpp  log.cc  stack_trace.cc  stack_trace.h  stack_trace_win.cc
src/so/: http.cc  http.h  rpc.cc  ssl.cc  tcp.cc
src/stack_trace/: StackWalker.cpp  StackWalker.hpp  stack_trace_unix.cc  stack_trace_win.cpp
src/unix/: os.cc
src/win/: os.cpp  time.cpp
test/: CMakeLists.txt  _build.sh  alloc.cc  amazon.cc  bm.cc  chan.cc  closure.cc  co.cc  co_test.cc  cout.cc  def_main.cc  defer.cc  err.cc  fast.cc  fast_test.cc  flag.cc  flag_test.cc  go.cc  hash.cc  hash_test.cc  json.cc  json_test.cc  jsonv2  jsonv2.cc  jv2.cc  log.cc  log_test.cc  maybe.cc  mem.cc  nco.cc  pool.cc  quickstart.cc  rapidjson.cc  rapidjson.h  rapidjson_test.cc  rpc_test.cc  stack.cc  stack_test.cc  str.cc  str_test.cc  (+14 more)
test/__/: rapidjson.h
test/__/rpc/: hello_world.h  hello_world.proto
test/co/: co.cc  nco.cc  pool.cc  yield.cc
test/j2s/: j2s.cc  j2s.h  j2s.proto  readme.md
test/rpc/: hello_world.h  hello_world.proto
test/so/: easy.cc  echo.cc  hello_again.h  hello_again.proto  hello_world.h  http_cli.cc  http_serv.cc  pingpong.cc  pingpong_test.cc  rpc.cc  rpclient.cc  ssl.cc  tcp.cc  tcp2.cc  tcp_test.cc  udp.cc
test/so/rpc/: hello_again.h  hello_again.proto  hello_world.h  hello_world.proto
unitest/: CMakeLists.txt  alien.cc  alloc.cc  array.cc  atomic.cc  atomic_test.cc  clist.cc  co.cc  fast.cc  fast_test.cc  fastream.cc  fastream_test.cc  fastring.cc  fastring_test.cc  flag.cc  fs.cc  fs_test.cc  god.cc  hash.cc  json.cc  lru_map_test.cc  main.cc  maybe.cc  mem.cc  mem_pool.cc  os.cc  path.cc  path_test.cc  rand.cc  random_test.cc  stl.cc  str.cc  str_test.cc  table.cc  thread.cc  time.cc  time_test.cc  vector.cc  xmake.lua
vs2015/: vs2015.sln
(+212 files in other folders)
